pro/src/pages/AdageIframe/app/components/AdageHeader/AdageHeaderBudget/AdageHeaderBudget.module.scss
@use "styles/mixins/_rem.scss" as rem;
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/fonts-design-system.scss" as fonts-design-system;
@use "styles/variables/_size.scss" as size;

.adage-header-budget {
  border-left: none;
  border-top: 1px solid var(--color-grey-medium);
  padding: rem.torem(8px);
  width: 100%;

  &-link {
    @include fonts.caption;

    display: block;
    margin-bottom: rem.torem(4px);
  }

  &-icon {
    margin-right: rem.torem(4px);
  }

  &-value {
    @include fonts-design-system.title4;

    white-space: nowrap;
    color: var(--color-brand);
    margin-left: 0;
  }
}

@media (min-width: size.$tablet) {
  .adage-header-budget {
    border-left: 1px solid var(--color-grey-medium);
    border-top: none;
    padding-left: 0 0 0 rem.torem(32px);
    width: unset;

    &-link {
      display: flex;
      align-items: center;
    }

    &-value {
      margin-left: rem.torem(20px);
    }
  }
}

